@@ -3952,6 +3952,7 @@ struct regen_data *status_get_regen_data(struct block_list *bl)
 			return NULL;
 	}
 }
+
 struct status_data *status_get_status_data(struct block_list *bl)
 {
 	nullpo_retr(NULL, bl);
